--- a/nav.css
+++ b/nav.css
@@ -1,28 +1,29 @@
-*{
+/* *{
     margin: 0;
     padding: 0;
-    color: #f2f5f7;
     font-family: sans-serif;
     letter-spacing: 1px;
     font-weight: 300;
-}
+} */
+
+
 body{
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
 }
 nav{
     height: 6rem;
     width: 100vw;
-    background-color: #131418;
-    box-shadow: 0 3px 20px rgba(0, 0, 0, 0.2);
+    background-color: transparent;
     display: flex;
-    position: fixed;
+    /* position: fixed; */
     z-index: 10;
 }
 
 /*Styling logo*/
-.logo{
+#navbar-logo{
     padding:1vh 1vw;
     text-align: center;
+    font-family: 'mograregular';
 }
 .logo img {
     height: 5rem;
@@ -37,19 +38,18 @@ nav{
     padding: 0 0.7vw;
     justify-content: space-evenly;
     align-items: center;
-    text-transform: uppercase;
 }
 .nav-links li a{
     text-decoration: none;
     margin: 0 0.7vw;
 }
 .nav-links li a:hover {
-    color: #61DAFB;
+    /* color: #61DAFB; */
 }
 .nav-links li {
     position: relative;
 }
-.nav-links li a::before {
+.nav-links li a::after {
     content: "";
     display: block;
     height: 3px;
@@ -59,7 +59,7 @@ nav{
     transition: all ease-in-out 250ms;
     margin: 0 0 0 10%;
 }
-.nav-links li a:hover::before{
+.nav-links li a:hover::after{
     width: 80%;
 }
 
