--- a/nav.css
+++ b/nav.css
@@ -9,6 +9,7 @@
 
 body{
     /* overflow-x: hidden; */
+    font-family: 'nunito_sansregular';
 }
 nav{
     height: 6rem;
@@ -36,13 +37,22 @@ nav{
     list-style: none; 
     width: 88vw;
     padding: 0 0.7vw;
-    justify-content: space-evenly;
+    justify-content: flex-end;
     align-items: center;
 }
+
 .nav-links li a{
     text-decoration: none;
-    margin: 0 0.7vw;
 }
+
+.nav-links li{
+    margin: 0 4.5vw;
+}
+
+.nav-links li:last-child{
+    margin: 0 0 0 5vw;
+}
+
 .nav-links li a:hover {
     /* color: #61DAFB; */
 }
