--- a/nav.css
+++ b/nav.css
@@ -137,6 +137,7 @@ nav{
         transition: all 0.7s ease;
     }
     .nav-links{
+        justify-content: space-evenly;
         position: fixed;
         background: #131418;
         height: 100vh;
