--- a/master.css
+++ b/master.css
@@ -46,11 +46,14 @@ h2 {
 
 
 .grid-container {
-    max-height: 500px;
+    width: 80%;
+    margin: 20vh auto;
+    min-height: 60vh;
+    max-height: 80vh;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 0.8fr 1.2fr;
     grid-template-rows: 0.8fr 1.6fr 0.8fr 0.8fr;
-    gap: 0px 0px;
+    gap: 0px 15%;
     grid-template-areas:
       "banner-header banner-image"
       "banner-content banner-image"
@@ -60,7 +63,7 @@ h2 {
   
   .banner-header { grid-area: banner-header; }
   
-  .banner-content { grid-area: banner-content; color: #444444}
+  .banner-content { grid-area: banner-content; color: #444444; line-height: 22px;}
   
   .banner-cta { grid-area: banner-cta; }
   
@@ -72,7 +75,27 @@ h2 {
     font-size: 52px;
 }
 
+.banner-header > h1,h2 {
+    margin: 2px 0px;
+}
+
+.banner-content {
+    padding: 20px 0px;
+}
+
   #my-pic {
     max-width: 100%;
     max-height: 100%;
+}
+
+#cta-btn {
+    background-color: #7544C6;
+    width: 115px;
+    height: 50px;
+    border: none;
+    outline: none;
+    box-shadow: none;
+    border-radius: 20px;
+    color: #ffffff;
+    font-weight: bold;
 }
