--- a/nav.css
+++ b/nav.css
@@ -8,17 +8,37 @@
 
 
 body{
-    /* overflow-x: hidden; */
+    overflow: auto;
     font-family: 'nunito_sansregular';
+    padding-top: 10vh;
 }
-nav{
+#navbar{
     height: 6rem;
     width: 80vw;
+    padding: 0 10vw;
     margin: 0 auto;
     background-color: transparent;
     display: flex;
     /* position: fixed; */
     z-index: 10;
+}
+
+#navbar {
+    position: fixed;
+    top: 0px;
+}
+
+#navbar-logo {
+    position: relative;
+}
+
+
+#navbar-logo > h1 {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
 }
 
 /*Styling logo*/
