--- a/master.css
+++ b/master.css
@@ -97,7 +97,7 @@ h2 {
 
 #grid-container-skill {
     display: grid;
-    grid-template-columns: 0.5fr 1.5fr;
+    grid-template-columns: 0.4fr 1.6fr;
     grid-template-rows: 1fr;
     gap: 0px 0px;
     grid-template-areas:
@@ -108,6 +108,16 @@ h2 {
   
   .grid-content { grid-area: grid-content; }
   
+
+.grid-logo > img {
+    height: 50px;
+}
+
+.grid-content > h2 {
+    line-height: 22px;
+    margin: 10px 0px 30px 0px;
+    font-weight: bold;
+}
 
 #name-header {
     font-size: 52px;
