--- a/master.css
+++ b/master.css
@@ -186,8 +186,8 @@ h2 {
 
 #grid-container-journeys {
     margin: 10vh auto;
-    min-height: 60vh;
-    max-height: 80vh;
+    /* min-height: 60vh;
+    max-height: 80vh; */
     display: grid;
     grid-template-columns: 1.4fr 0.2fr 1.4fr;
     grid-template-rows: 1fr 1fr 1fr 1fr;
@@ -244,8 +244,10 @@ h2 {
 
 .timeline {
     width: fit-content;
+    padding: 0px 30px;
 }
 
-.timeline > img {
+.timeline > .center > img {
+    display: block;
     height: 100%;
 }
