--- a/master.css
+++ b/master.css
@@ -25,6 +25,11 @@
     font-size: 16px;
 }
 
+body {
+    margin: 0px;
+    padding: 0px 0px 2rem 0px;
+}
+
 h1 {
     font-family: 'mograregular';
     font-size: 36px;
@@ -134,8 +139,8 @@ h2 {
 }
 
 #my-pic {
-    max-width: 100%;
-    max-height: 100%;
+    max-width: 90%;
+    padding: 0px 5%;
 }
 
 #cta-btn {
@@ -250,4 +255,9 @@ h2 {
 .timeline > .center > img {
     display: block;
     height: 100%;
+}
+
+.footer-style {
+    font-weight: 400;
+    color: gray;
 }
