added button animation

--- a/master.css
+++ b/master.css
@@ -155,7 +155,20 @@ h2 {
     color: #ffffff;
     font-weight: bold;
     margin: 10px 0px;
+    box-shadow: 0px 8px 15px rgb(0 0 0 / 24%);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
 }
+
+
+#cta-btn:hover {
+    background-color: #2EE59D;
+    box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+    /* color: #fff; */
+    transform: translateY(-7px);
+}
+
 
 #social-icon-container {
     height: fit-content;
