--- a/nav.css
+++ b/nav.css
@@ -11,6 +11,7 @@ body{
     overflow: auto;
     font-family: 'nunito_sansregular';
     padding-top: 10vh;
+    background-color: #F8F8FF;
 }
 #navbar{
     height: 5rem;
@@ -20,6 +21,7 @@ body{
     display: flex;
     /* position: fixed; */
     z-index: 10;
+    transition: all 0.1s ease-in;
 }
 
 #navbar {
@@ -51,7 +53,9 @@ body{
     position: fixed;
     top: 0;
     width: 100%;
-    background-color: white;
+    background-color: #FFFAFA;
+    box-shadow: 0px 2px 7px 2px rgba(97,97,97,0.2);
+    transition: all 0.1s ease-in;
   }
 
 
