--- a/nav.css
+++ b/nav.css
@@ -72,6 +72,7 @@ body{
     padding: 0 0.7vw;
     justify-content: flex-end;
     align-items: center;
+    position:relative; 
 }
 
 .nav-links li a{
@@ -143,7 +144,7 @@ body{
 .hamburger div{
     width: 30px;
     height:3px;
-    background: #f2f5f7;
+    background: #4b4b4b;
     margin: 5px;
     transition: all 0.3s ease;
 }
@@ -171,19 +172,32 @@ body{
     .nav-links{
         justify-content: space-evenly;
         /* position: fixed; */
-        background: #131418;
+        background-color:white;
         height: 100vh;
         width: 100%;
         flex-direction: column;
-        clip-path: circle(50px at 90% -20%);
-        -webkit-clip-path: circle(50px at 90% -10%);
-        transition: all 1s ease-out;
+        clip-path: polygon(50% 10%, 50% 10%, 50% 10%, 50% 10%);
+        -webkit-clip-path:  polygon(50% 10%, 50% 10%, 50% 10%, 50% 10%);
+        opacity: 0.1;
+        transition: all 0.3s ease-out;
         pointer-events: none;
     }
+    .nav-links li:last-child{
+        margin: 0 0 0 0;
+    }
     .nav-links.open{
-        clip-path: circle(1000px at 90% -10%);
-        -webkit-clip-path: circle(1000px at 90% -10%);
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+        -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
         pointer-events: all;
+        /* opacity:0.8; */
+        background-color:white;
+        position:fixed; 
+        width:100vw;
+        height:100vh;
+        top:0px;
+        left:0px;
+        margin: 0px;
+        opacity: 1;
     }
     .nav-links li{
         opacity: 0;
