--- a/master.css
+++ b/master.css
@@ -326,6 +326,7 @@ h2 {
 .footer-style {
     font-weight: 400;
     color: gray;
+    font-size: 14px;
 }
 
 .section-header {
@@ -357,7 +358,7 @@ h2 {
     }
 
     #grid-container-banner {
-        margin: 2vh auto;
+        margin: 0vh auto 2vh auto;
         height: fit-content;
         display: grid;
         grid-template-columns: 1fr;
