--- a/nav.css
+++ b/nav.css
@@ -54,7 +54,7 @@ body{
     top: 0;
     width: 100%;
     background-color: #FFFAFA;
-    box-shadow: 0px 2px 7px 2px rgba(97,97,97,0.2);
+    -webkit-box-shadow: 0px 2px 7px 2px rgba(97,97,97,0.2) ;box-shadow: 0px 2px 7px 2px rgba(97,97,97,0.2);
     transition: all 0.1s ease-in;
   }
 
