--- a/master.css
+++ b/master.css
@@ -320,7 +320,7 @@ h2 {
 
 .timeline > .center > img {
     display: block;
-    height: 100%;
+    height: 103%;
 }
 
 .footer-style {
@@ -423,7 +423,7 @@ h2 {
       }
 
       #grid-container-journeys {
-        margin: 2vh auto;
+        margin: 2rem auto;
         display: grid;
         grid-template-columns: 0.2fr 2.8fr 0fr;
         grid-template-rows: min-content min-content min-content min-content;
@@ -442,6 +442,7 @@ h2 {
 
     .grid-container-journey {
         display: grid;
+        grid-template-columns: min-content auto;
         grid-template-rows: 0.5fr 0.5fr 2fr;
         gap: 0px 0px;
         grid-template-areas:
@@ -453,6 +454,11 @@ h2 {
     .timeline {
         padding: 0px 30px 0px 10px;
     }
+
+    .grid-journey-logo > img {
+        float: none;
+        margin-right: 5px;
+  }
 
 }
 
